# robocon2024_R2

./: apid.sh  r2_auto.sh  requirements.txt  rm_start.sh  sensor_reader.sh  start.sh
install/: setup.sh
install/R2_main/lib/R2_main/: r2_ps4
install/R2_main/share/R2_main/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arduino_comm/share/arduino_comm/: package.bash
install/auto/lib/auto/: webcam_node
install/auto/share/auto/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_control_package/lib/arduino_comm/: motor_control_publisher  motor_data_reader
install/motor_control_package/share/motor_control_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigation/lib/navigation/: movement_control  navigation_node  omni_pid
install/navigation/share/navigation/: package.sh
install/ps4/lib/ps4/: ps4_publisher
install/ps4/share/ps4/: package.sh  package.xml  package.zsh
install/r2_auto/lib/r2_auto/: omni_pid  r2_main_node  r2_ps4_node
install/r2_auto/share/r2_auto/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sensor/lib/sensor/: gyrosensor  sensor_publisher  stp32l
install/sensor/share/sensor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
roboflow/: cam.py  cam2.py  jet_cam.py  test_cam.py  w_cam.py
roboflow/model/: args.yaml  results.csv
src/auto/: rm_start.sh  setup.py  start.sh
src/auto/install/: local_setup.sh
src/auto/install/arduino_comm/lib/arduino_comm/: arduino_mega_m3508_comm_node  motor_control_publisher  motor_data_subscriber
src/auto/install/arduino_comm/share/arduino_comm/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/auto/install/motor_control_package/lib/arduino_comm/: motor_control_subscriber
src/auto/install/navigation/lib/navigation/: omni_pid  (+1 more)
src/auto/src/auto/: package.xml
src/auto/src/auto/auto/: cam.py
src/auto/src/motor_control_package/motor_control_package/: motor_data_reader.py
src/auto/src/navigation/: package.xml
src/auto/src/navigation/navigation/: omni_pid copy.py
src/auto/src/ps4/ps4/: ps4_publisher.py  readme.md
src/motor_control_package/: setup.py
src/motor_control_package/motor_control_package/: angle_rotation.py  motor_data_reader.py
src/motor_control_package/motor_control_package/ROS_to_M3508_Bridge/: ROS_to_M3508_Bridge.ino
src/navigation/: setup.py
src/navigation/navigation/: omni_pid copy PID tested.py  omni_pid.py
src/ps4/: setup.py
src/ps4/ps4/: ps4_subscriber.py
src/r2_auto/: setup.py
src/r2_auto/r2_auto/: r2_main.py
src/sensor/: setup.py
src/sensor/sensor/: gyrosensor.py
(+11 files in other folders)
