<?xml version="1.0"?>
<package format="2">
  <name>motor_control_package</name>
  <version>0.0.0</version>
  <description>Package for motor control communication with Arduino</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>